Tests/NegativeCompileTestsRunner/Extensions/FileManager+directoryExists.swift
//
// This source file is part of the Apodini open source project
// 
// SPDX-FileCopyrightText: 2019-2021 Paul Schmiedmayer and the Apodini project authors (see CONTRIBUTORS.md) <paul.schmiedmayer@tum.de>
//
// SPDX-License-Identifier: MIT
//
import Foundation

extension FileManager {
    /// Checks if a directory exists.
    /// - Parameter url: The `URL` to the file which should be checked.
    /// - Returns: Returns true if the file located under the URL exists AND is a directory.
    func directoryExists(at url: URL) -> Bool {
        var isDirectory: ObjCBool = false
        return fileExists(atPath: url.path, isDirectory: &isDirectory) && isDirectory.boolValue
    }
}
